# itm_models

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: msis_example.ipynb
itm_models/: __init__.py  igrf.py  iri.py  msis.py
