[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itm_models"
version = "0.1.0"
description = "Simple xarray wrappers for other Python wrappers of ITM models like MSIS, IRI, and IGRF."
authors = [{ name = "Brian Harding", email = "bharding@ssl.berkeley.edu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "xarray",
    "pymsis",
]

[tool.setuptools.packages.find]
where = ["."]
